# mooc-evals-monoid

./: pyproject.toml
tasks/: 2026-03-27-nvidia-model-debug.md  2026-03-27-week2-duplicate-sample-id.md
w1/: inspect_ai_tutorial_week_1.ipynb  position_bias_exploration.ipynb  position_bias_results_brief.ipynb
w1/logs/: 2026-03-22T13-37-56-00-00_hello-model_kyovQN6M6zMsRYNUCta6o8.eval  2026-03-22T13-38-01-00-00_example-system-message_9wUpymbTG8RLDM524onpsY.eval  2026-03-22T13-38-03-00-00_example-prompt-template_M49CLoXAwTfbnQkWK96h7p.eval  2026-03-22T13-38-04-00-00_example-chain-of-thought_n65GMQAD8axSvtC2nb6BBZ.eval  2026-03-22T13-38-05-00-00_example-multiple-choice-with-cot_MXkk3bpLLj8rsDCwM2awDk.eval  2026-03-22T13-38-12-00-00_yes-no-classification_iL9rKAH8GtaUBj3Q3jZVhn.eval  2026-03-22T13-38-16-00-00_sentiment-classification_HRP4W5YyUbT4wdwfsh5YZA.eval  2026-03-22T13-38-19-00-00_choice-with-reasoning_W8ATTFKmJD8qvJsnfVXb6s.eval  2026-03-22T13-38-21-00-00_mc-with-metadata_aubN7eERw7sj8d259aVTdA.eval  2026-03-22T13-38-22-00-00_mc-multiple-correct_RpuBntADVyKJHuyhKBTfbv.eval  2026-03-22T13-38-24-00-00_position-bias-task_FzEbyU2cqJH6jyXDAGYG46.eval  2026-03-22T13-38-35-00-00_position-bias-task_8DUGgyvdJrxZGEVCx4Ytdd.eval  2026-03-22T13-47-53-00-00_position-bias-task_UzDvtn9CAmGdy6oDtCBmAj.eval  2026-03-22T13-47-59-00-00_position-bias-task_ibUgQcEwztuNicLtVSL8xu.eval  2026-03-22T13-48-02-00-00_position-bias-cot-task_drpPUnrcjB6DJTApuK5XkE.eval  (+21 more)
w2/: inspect_ai_tutorial_week_2.ipynb
w3/: inspect_ai_tutorial_week_3.ipynb
w4/: inspect_ai_tutorial_week_4.ipynb
(+168 files in other folders)
