[project]
name = "monoid-evals"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "inspect-ai>=0.3.199",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "openai>=2.29.0",
    "seaborn>=0.13.2",
]
