[project]
name = "monoid-evals"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.4",
    "groq>=1.1.2",
    "inspect-ai>=0.3.199",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "litellm>=1.82.6",
    "marimo>=0.23.1",
    "matplotlib>=3.10.8",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "openai>=2.29.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
